syntax = "proto3";

package ocpcexps;

message SingleRecord {
    string identifier = 1;
    double cpcBid = 2;
}


message OcpcList {
    repeated SingleRecord adrecord = 1;
}
